--- a/GoCleanYourComputer.csproj
+++ b/GoCleanYourComputer.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
         <UseWPF>true</UseWPF>
     </PropertyGroup>
+    <PropertyGroup>
+
+        <ApplicationManifest>app.manifest</ApplicationManifest>
+
+    </PropertyGroup>
 </Project>
