--- a/GoCleanYourComputer.csproj
+++ b/GoCleanYourComputer.csproj
@@ -7,8 +7,11 @@
         <UseWPF>true</UseWPF>
     </PropertyGroup>
     <PropertyGroup>
-
         <ApplicationManifest>app.manifest</ApplicationManifest>
-
+        <ApplicationIcon>Icons\icon.ico</ApplicationIcon>
     </PropertyGroup>
+    <ItemGroup>
+         <Resource Include="Fonts\JetBrainsMono.ttf" />
+         <Resource Include="Icons\icon.ico" />
+    </ItemGroup>
 </Project>
