--- a/GoCleanYourComputer.csproj
+++ b/GoCleanYourComputer.csproj
@@ -9,9 +9,25 @@
     <PropertyGroup>
         <ApplicationManifest>app.manifest</ApplicationManifest>
         <ApplicationIcon>Icons\icon.ico</ApplicationIcon>
+        <NeutralLanguage>en</NeutralLanguage>
+        <Authors>SpaceGameDev Software Developments</Authors>
+        <SignAssembly>False</SignAssembly>
     </PropertyGroup>
     <ItemGroup>
          <Resource Include="Fonts\JetBrainsMono.ttf" />
          <Resource Include="Icons\icon.ico" />
+    </ItemGroup>
+    <ItemGroup>
+      <Compile Update="Properties\Resources.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Resources.resx</DependentUpon>
+      </Compile>
+    </ItemGroup>
+    <ItemGroup>
+      <EmbeddedResource Update="Properties\Resources.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
     </ItemGroup>
 </Project>
